@@ -5,34 +5,11 @@
     using System.Linq;
     using System.Text;
 
-    public class ElementComparer : IComparer<Element>
+    public class ElementComparer : IComparer<IElement>
     {
-        public int Compare(Element element1, Element element2)
+        public int Compare(IElement element1, IElement element2)
         {
-            if (element1.Order < element2.Order)
-            {
-                return -1;
-            }
-
-            if (element1.Order > element2.Order)
-            {
-                return 1;
-            }
-
-            for (int k = 0; k < element1.Size; k++)
-            {
-                if (element1.Values[k] < element2.Values[k])
-                {
-                    return -1;
-                }
-
-                if (element1.Values[k] > element2.Values[k])
-                {
-                    return 1;
-                }
-            }
-
-            return 0;
+            return element1.CompareTo(element2);
         }
     }
 }
